--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "sweetalert2": "^11.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
