added homepage line in package.json

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://sourish33.github.io/ScrabbleReact",
   "name": "scrabble-react",
   "version": "0.1.0",
   "private": true,
