--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "sweetalert2": "^11.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
