--- a/package.json
+++ b/package.json
@@ -4,16 +4,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.1",
-    "@testing-library/user-event": "^7.2.1",
-    "bootstrap": "^5.0.2",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-beta.4",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "sweetalert2": "^11.1.2"
+    "bootstrap": "^5.3.0",
+    "react": "^18.0.0",
+    "react-bootstrap": "^2.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.0.0",
+    "react-scripts": "5.0.0",
+    "sweetalert2": "^11.1.0"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -40,6 +37,7 @@
   },
   "devDependencies": {
     "gh-pages": "^3.2.3",
-    "workerize-loader": "^1.3.0"
+    "workerize-loader": "^2.0.0"
   }
 }
+
